@@ -21,6 +21,9 @@ Changes
 Fixes
 =====
 
+ - Fixed an issue that caused a table that is not part of the "doc" schema to be
+   unavailable/hidden if it gets closed using ``ALTER TABLE``.
+
  - Fixed an issue where the query circuit breaker would be tripped after 
    running several queries due to incorrect memory tracking. Subsequent 
    operations would've failed due to the lack of circuit breaker cleanup.
